[package]
name = "rusty-blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
num-bigint = "0.4.0"
sha2 = "0.10.8"
data-encoding = "2.3.0"
bincode = "1.3.3"
sled = "0.34"

